three js: add a rotating cube

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="app">
       
-      <svg id="tubeMapSVG" style="width: 2000px; height: 500px"></svg>
+      <svg id="tubeMapSVG" style="width: 100%; max-width: 2000px"></svg>
 
       <!-- <div class="alert" id="alert">
         <div class="alert__content">This is a message.</div>
