--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pgv</title>
+    <title>Variation Graph Visualization</title>
   </head>
   <body>
     <div id="app">
