chore: move demo styles out of the ui module

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -6,14 +6,7 @@
     <title>Variation Graph Visualization</title>
   </head>
   <body>
-    <div id="app">
-
-      <!-- <div class="alert" id="alert">
-        <div class="alert__content">This is a message.</div>
-        <div class="alert__close" onclick="document.getElementById('alert').style.display = 'none'">[x]</div>
-      </div> -->
-
-    </div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
